add section about

--- a/#src/sass/_settings.sass
+++ b/#src/sass/_settings.sass
@@ -59,7 +59,19 @@ input
   text-align: center
   letter-spacing: 0.09em
   color: rgba(255, 255, 255, 0.6)
-  transform: rotate(-90deg)
+  transform: rotate(-180deg)
+  writing-mode: vertical-lr
+  padding: 120px 0 120px 105px
+  position: relative
+  &::before
+    position: absolute
+    content: ''
+    top: 0
+    right: 0
+    width: 79px
+    height: 1px
+    background-color: $light
+    transform: translateX(35%) rotate(172.52deg)
 
 .btn-reset
   padding: 0
@@ -85,17 +97,17 @@ input
   position: relative
   // padding: var(--skew-padding) 0
   margin-top: -1px
-  &::before
-    content: ""
-    position: absolute
-    left: 0
-    top: 0
-    right: 0
-    bottom: 0
-    transform: skewy(var(--angle))
-    transform-origin: -1px 0
-    outline: 1px solid transparent
-    backface-visibility: hidden
+  // &::before
+  //   content: ""
+  //   position: absolute
+  //   left: 0
+  //   top: 0
+  //   right: 0
+  //   bottom: 0
+  //   transform: skewy(var(--angle))
+  //   transform-origin: -1px 0
+  //   outline: 1px solid transparent
+  //   backface-visibility: hidden
 
 .bg-one:before
   background-image: linear-gradient(45deg, #654ea3, #eaafc8)
