--- a/#src/sass/components/_first.sass
+++ b/#src/sass/components/_first.sass
@@ -5,6 +5,7 @@
   background-size: cover
   background-repeat: no-repeat
   clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%)
+  z-index: 4
 
   &::after
     position: absolute
