--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -15,6 +15,7 @@
 @import 'components/header'
 @import 'components/first'
 @import 'components/features'
+@import 'components/about'
 
 // подключение стилей главного слайдера
 // @import 'components/main-slider'
