--- a/#src/sass/components/_header.sass
+++ b/#src/sass/components/_header.sass
@@ -7,7 +7,7 @@
     align-items: center
   &__logo
     height: 59px
-    margin-right: 203px
+    margin-right: 197px
   &__menu
     margin-right: 78px
   &__phone
@@ -26,8 +26,8 @@
         &::before
           content: ''
           position: absolute
-          right: -4px
-          top: 0
+          right: -5px
+          top: 2px
           height: 16px
           width: 2px
           background-color: $white
@@ -40,6 +40,6 @@
     display: flex
     align-items: center
   &__item
-    width: 20px
-    height: 20px
+    width: 24px
+    height: 24px
     margin-right: 29px
