--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -16,6 +16,7 @@
 @import 'components/first'
 @import 'components/features'
 @import 'components/about'
+@import 'components/contacts'
 
 // подключение стилей главного слайдера
 // @import 'components/main-slider'
