--- a/#src/sass/components/_features.sass
+++ b/#src/sass/components/_features.sass
@@ -6,7 +6,7 @@
   // padding-top: 100px
   // padding-bottom: 100px
   // overflow: hidden
-  position: relative
+  // position: relative
   z-index: 3
   &__container
     // transform: skewY(11deg)
