add jalousie page

--- a/#src/sass/components/_header.sass
+++ b/#src/sass/components/_header.sass
@@ -2,6 +2,7 @@
   background-color: $bgc
   padding-top: 18px
   padding-bottom: 18px
+  z-index: 8
   &__container
     display: flex
     align-items: center
