--- a/#src/sass/_settings.sass
+++ b/#src/sass/_settings.sass
@@ -1,6 +1,7 @@
 :root
   --width: 100vw
   --angle: -7.8deg
+  --angle-right: 6.2deg
   --magic-number: 0.06845
   --skew-padding: calc(var(--width) * var(--magic-number))
 
@@ -43,7 +44,7 @@ input
 .image
   width: 100%
   height: 100%
-  object-fit: contain
+  object-fit: cover
 
 .logo--header
   height: 50px
@@ -72,6 +73,12 @@ input
     height: 1px
     background-color: $light
     transform: translateX(35%) rotate(172.52deg)
+  &-right::before
+    transform: translateX(35%) rotate(-172.52deg)
+    top: 14px
+  &-last::before
+    content: none
+
 
 .btn-reset
   padding: 0
