--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -1,5 +1,3 @@
-@import 'libs'
-
 // сброс дефолтных стилей
 @import 'reset'
 // подключение миксинов
@@ -17,9 +15,13 @@
 @import 'components/features'
 @import 'components/about'
 @import 'components/contacts'
+@import 'components/box'
 
-// подключение стилей главного слайдера
-// @import 'components/main-slider'
+// подключение стилей страницы ЖАЛЮЗИ
+
+@import 'components/roller'
+
+
 // подключение стилей верхнего меню
 @import 'components/nav'
 
