--- a/#src/sass/components/_roller.sass
+++ b/#src/sass/components/_roller.sass
@@ -63,6 +63,14 @@
       transform: translateY( var(--translation) )
   &__box
     margin-bottom: 0
+    &-first
+      margin-bottom: 67px
+
+  &__bottom
+    position: absolute
+    bottom: -117px
+    right: 20px
+    transform: rotate(180deg)
 
   &__btn
     padding-left: 47px
