add page with fabric and modal window

--- a/#src/sass/_settings.sass
+++ b/#src/sass/_settings.sass
@@ -11,6 +11,9 @@ body
   @extend %body
   background-color: $bgc
   color: $text
+  &._lock
+    overflow: hidden !important
+    height: 100% !important
 
 html,
 body
