--- a/#src/sass/components/_hover.sass
+++ b/#src/sass/components/_hover.sass
@@ -1,1 +1,6 @@
 @media ( min-width: 992px )
+  .main-slider__btn:hover
+    width: 18px
+    height: 28px
+  .modal__close:hover
+    transform: rotate(90deg)
