--- a/#src/sass/components/_roller.sass
+++ b/#src/sass/components/_roller.sass
@@ -1,6 +1,6 @@
 .roller
-  // position: relative
-  z-index: 3
+  position: relative
+  // z-index: 3
   &__container
     // transform: skewY(11deg)
     z-index: 2
@@ -79,8 +79,12 @@
     outline: none
     border: none
     &-svg
+      padding: 10px
       width: 76px
       height: 76px
+      fill: $text
+      border: 4px solid $text
+      border-radius: 50%
 
   &__title
     font-family: 'Montserrat'
@@ -91,3 +95,18 @@
     p
       &:not(:last-child)
         margin-bottom: 20px
+
+  &-roller
+    z-index: 10
+  &-day-night
+    z-index: 11
+    & .box-btns
+      z-index: 40
+  &-rome
+    z-index: 12
+  &-wood
+    z-index: 13
+  &-rollet
+    z-index: 14
+  &-setka
+    z-index: 15
