--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -18,8 +18,10 @@
 @import 'components/box'
 
 // подключение стилей страницы ЖАЛЮЗИ
-
 @import 'components/roller'
+// подключение стилей страницы ТКАНЕЙ
+@import 'components/fabric'
+@import 'components/_main-slider'
 
 
 // подключение стилей верхнего меню
@@ -27,6 +29,7 @@
 
 // подключение стилей подвала
 @import 'components/footer'
+@import 'components/modal'
 // подключение стилей для аккордеона
 // @import 'components/accordeon'
 // подключение стилей для слайдера с отзывами
