--- a/#src/sass/components/_main-slider.sass
+++ b/#src/sass/components/_main-slider.sass
@@ -1,53 +1,59 @@
 .main-slider
   position: relative
-  height: 100vh
-  max-height: 800px
+  height: 360px
+  width: 600px
+  // max-height: 800px
   background-color: $bgc
-  color: $grey
+  // color: $grey
+  filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.3)) drop-shadow(-3px -3px 10px rgba(255, 255, 255, 0.18))
   &__container
     box-sizing: border-box
     width: 100%
     display: flex
     justify-content: center
   &__slide
-    display: flex
-    align-items: center
+    width: 600px
+    height: 360px
+    // display: flex
+    // align-items: center
     background-position: center
     background-repeat: no-repeat
     background-size: cover
-    &::before
-      content: ''
-      position: absolute
-      top: 0
-      left: 0
-      width: 100%
-      height: 100%
-      background-color: $bgc
-      opacity: .6
-      z-index: 1
-  &__head
-    position: relative
-    max-width: 915px
-    font-size: 100px
-    line-height: 120px
-    color: $white
-    z-index: 5
+    filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.3)) drop-shadow(-3px -3px 10px rgba(255, 255, 255, 0.18))
+    // &::before
+    //   content: ''
+    //   position: absolute
+    //   top: 0
+    //   left: 0
+    //   width: 100%
+    //   height: 100%
+    //   background-color: $bgc
+    //   opacity: .6
+    //   z-index: 1
+  // &__head
+  //   position: relative
+  //   max-width: 915px
+  //   font-size: 100px
+  //   line-height: 120px
+  //   color: $white
+  //   z-index: 5
   &__btn
     position: absolute
     top: 50%
     transform: translateY(-50%)
     height: 22px
-    width: 25px
+    width: 14px
     cursor: pointer
     z-index: 12
+    transition: all 0.3s linear
+    // transition: all 0.3s linear
     &-prev
-      left: calc(50% - 553px)
+      left: 50px
     &-fill
-      width: 25px
-      height: 22px
+      width: 100%
+      height: 100%
       fill: #B2B2B2
       object-fit: cover
-      transition: fill 0.3 ease-in-out
     &-next
-      right: calc(50% - 553px)
-      transform: rotate(180deg)
+      right: 50px
+      transform: translateY(-50%) rotate(180deg)
