--- a/#src/sass/components/_header.sass
+++ b/#src/sass/components/_header.sass
@@ -15,6 +15,8 @@
     height: 20px
     width: 20px
     margin-right: 30px
+    img
+      transition: all 0.3s linear
   &__lang
     display: flex
     align-items: center
@@ -44,3 +46,5 @@
     width: 24px
     height: 24px
     margin-right: 29px
+    img
+      transition: all 0.3s linear
