--- a/#src/sass/components/_hover.sass
+++ b/#src/sass/components/_hover.sass
@@ -1,6 +1,26 @@
 @media ( min-width: 992px )
+  .menu__item:hover
+    &::before
+      width: 100%
   .main-slider__btn:hover
     width: 18px
     height: 28px
+  .header__phone:hover img
+    transform: scale(1.1)
+  .social__item:hover img
+    transform: scale(1.1)
+  .first__btn:hover
+    padding: 20px 40px
+    background-color: darken(#EF8354, 5%)
+    filter: drop-shadow(2px 6px 11px rgba($text, 0.7))
+  .contacts__item:hover img
+    transform: scale(1.1)
+  .contacts__adress:hover
+    &::before
+      width: 100%
+  .box-btn:hover
+    // padding: 10px 35px
+    background-color: darken($text, 5%)
+    filter: drop-shadow(2px 4px 7px rgba($text, 0.7))
   .modal__close:hover
     transform: rotate(90deg)
