--- a/#src/sass/components/_modal.sass
+++ b/#src/sass/components/_modal.sass
@@ -13,6 +13,7 @@
   opacity: 0
   transition: all 0.3s linear
   color: $light
+  backdrop-filter: blur(5px)
   &._active
     visibility: visible
     opacity: 1
@@ -23,14 +24,14 @@
     left: 0
     bottom: 0
     right: 0
-    background-color: rgba(darken($bgc, 25%), 0.95)
+    background-color: rgba(darken($bgc, 25%), 0.9)
   &__inner
     position: fixed
     top: 50%
     left: 50%
-    width: 850px
+    width: 65%
     transform: translate(-50%, -50%)
-    background: rgba($bgc, 0.8)
+    background: rgba($bgc, 0.65)
     border-radius: 50px
     padding: 60px 50px
     height: 90vh
@@ -58,7 +59,7 @@
     @include font(400, 18, 22)
     // max-width: 520px
     margin: 0 auto
-    margin-bottom: 60px
+    // margin-bottom: 60px
     h3
       @include font(500, 22, 22)
       text-align: center
