--- a/#src/sass/components/_nav.sass
+++ b/#src/sass/components/_nav.sass
@@ -1,6 +1,4 @@
 .menu
-  // margin-top: 6px
-  // margin-left: 50px
   &__body
     margin-top: -5px
     @media (max-width: 768px)
@@ -44,21 +42,20 @@
     font-family: 'Montserrat'
     @include font(600, 16, 20)
     color: $light
-
     transition: color 0.3s ease-in-out
+    &::before
+      position: absolute
+      content: ''
+      display: block
+      bottom: -6px
+      width: 0%
+      height: 2px
+      background-color: $white
+      transition: 0.5s
     &:not(:last-child)
       margin-right: 63px
     &.current
       color: $text
-    @media (min-width: 768px)
-      &._hover
-        .menu__sub-list
-          visibility: visible
-          pointer-events: auto
-          opacity: 1
-          transform: translate(0px, 0px)
-        .menu__arrow
-          transform: rotate(-180deg)
     @media (max-width: 768px)
       margin-bottom: 40px
       font-weight: 800
