--- a/#src/sass/style.sass
+++ b/#src/sass/style.sass
@@ -38,6 +38,6 @@
 // подключение эффектов при наведении
 @import 'components/hover'
 // подключение анимации
-//@import 'components/animation'
+@import 'components/animation'
 // подключение стилей для модального окна
 //@import 'media'
